--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div>
           <h1>
-            Hi, I'm Faayiz Kasim! //<img src="https://twemoji.maxcdn.com/2/72x72/1f44b.png" width="60px"/>
+            Hi, I'm Faayiz Kasim!
           </h1>
           <p>
             I am a seasoned software architect with 8 years of expertise spanning both application and presentation layers.
